--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-.title{
-    font-size: 40px;
-}
-
-.button{
-    padding: 10px;
-    margin: 10px;
-}
-
-.q2{
-    visibility: hidden;
+body{
+    background-color: #000;
 }
